# lingmo-clock

./: CMakeLists.txt  org.lingmo.clock.desktop
debian/: changelog  control  copyright  lingmo-clock.install  rules
src/: AlarmView.qml  AnalogClock.qml  NotificationDialog.qml  SideBar.qml  StopwatchView.qml  TimerView.qml  WorldClockView.qml  main.cpp  main.qml  resources.qrc
translations/: en_US.ts  ja_JP.ts  ko_KR.ts  ru_RU.ts  zh_CN.ts
